# cs410su09

./: .gitignore  AUTHORS  ChangeLog  Makefile  Makefile.am  Makefile.in  NEWS  README  configure  configure.ac
db_creation_scripts/: 0_drop_broke_tables.postgresql  1_create_broke_tables.postgresql  1_create_main_tables.postgresql  2_insert_structural_data.postgresql
db_scripts/: 0_drop.postgresql  1_create.postgresql  2_insert_plants.postgresql  2_insert_sizes.postgresql  Makefile  TODO
doc/: conventions
doc/schema/: anomalies.html  columns.byAuto.html  columns.byChildren.html  columns.byColumn.html  columns.byDefault.html  columns.byNulls.html  columns.byParents.html  columns.bySize.html  columns.byTable.html  columns.byType.html  constraints.html  deletionOrder.txt  index.html  insertionOrder.txt  reidmv.public.xml  relationships.html  utilities.html
doc/schema/diagrams/: addresses.1degree.dot  addresses.2degrees.dot  availabilities.1degree.dot  availabilities.2degrees.dot  business_partner_types.1degree.dot  business_partner_types.2degrees.dot  business_partners.1degree.dot  business_partners.2degrees.dot  colors.1degree.dot  colors.2degrees.dot  contact_detail_types.1degree.dot  contact_detail_types.2degrees.dot  contact_details.1degree.dot  contact_details.2degrees.dot  contacts.1degree.dot  contacts.2degrees.dot  customer_order_lineitem_statuses.1degree.dot  customer_order_lineitem_statuses.2degrees.dot  customer_order_lineitems.1degree.dot  customer_order_lineitems.2degrees.dot  customer_order_statuses.1degree.dot  customer_order_statuses.2degrees.dot  customer_orders.1degree.dot  customer_orders.2degrees.dot  geographical_zones.1degree.dot  geographical_zones.2degrees.dot  inqueries.1degree.dot  inqueries.2degrees.dot  inquery_lineitems.1degree.dot  inquery_lineitems.2degrees.dot  inquery_messages.2degrees.dot  invoice_lineitems.1degree.dot  invoice_lineitems.2degrees.dot  invoice_statuses.1degree.dot  invoice_statuses.2degrees.dot  invoices.1degree.dot  invoices.2degrees.dot  pickup_list_lineitem_statuses.1degree.dot  pickup_list_lineitem_statuses.2degrees.dot  pickup_list_lineitems.1degree.dot  (+26 more)
doc/schema/tables/: addresses.html  availabilities.html  business_partner_types.html  business_partners.html  colors.html  contact_detail_types.html  contact_details.html  contacts.html  customer_order_lineitem_statuses.html  customer_order_lineitems.html  customer_order_statuses.html  customer_orders.html  geographical_zones.html  inqueries.html  inquery_lineitems.html  inquery_messages.html  invoice_lineitems.html  invoice_statuses.html  invoices.html  pickup_list_lineitem_statuses.html  pickup_list_lineitems.html  pickup_lists.html  plants.html  purchase_order_lineitem_statuses.html  purchase_order_lineitems.html  purchase_order_statuses.html  purchase_orders.html  shipping_load_statuses.html  (+6 more)
documentation/: conventions
documentation/SchemaSpy/: columns.byAuto.html  columns.byChildren.html  columns.byColumn.html  columns.byDefault.html  columns.byNulls.html  columns.byParents.html  columns.bySize.html  columns.byTable.html  columns.byType.html  constraints.html  deletionOrder.txt  index.html  insertionOrder.txt  reidmv.public.xml  relationships.html  utilities.html
src/: Makefile  Makefile.am  Makefile.in  broke.c  broke.glade  broke_ui.c  broke_ui.h  common.h  connection.c  connection.h  constants.h  event_handlers.c  main.c  main.h
src/data/glade/: about.glade  broke.glade  main.glade
(+100 files in other folders)
